<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context="mismascotas.Bio">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:id="@+id/bar2"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <ImageView
                android:id="@+id/toolbar_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/huella"
                android:textColor="@android:color/white"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_gravity="left"
                />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name2"
                android:textColor="@android:color/white"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_gravity="center"
                />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bar2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textViewa2"
        android:text="@string/mensaje0"
        android:textStyle="bold"
        android:paddingBottom="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewa2"
        android:textAppearance="?android:attr/textAppearanceLarge"
       android:id="@+id/textViewa"
        android:text="@string/mensaje3"
        android:gravity="left"
               />
</RelativeLayout>
